--- a/ORF-News.html
+++ b/ORF-News.html
@@ -27,7 +27,7 @@
 
 <article class="news-article">
     <h1>NEWS</h1>
-    <img class="orf-logo" src="orf-logo.jpg" width="103" height="39" alt="ORF.at">
+    <img class="orf-logo" src="orf-logo.svg" width="103" height="39" alt="ORF.at">
     <h2>Weltweit Entsetzen nach Angriff auf Runshdie</h2>
     <p class="news-text"> Der Messerangriff auf den Schriftsteller Salman Rushdie hat weltweit
         Entsetzen ausgelöst: Die US-Regierung und UNO-Generalsekretär Antonio
