--- a/Contact.html
+++ b/Contact.html
@@ -29,7 +29,7 @@
 <article class="contact-ar">
 
     <h1>NEWS</h1>
-    <img src="orf-logo.jpg" width="103" height="39" alt="ORF.at">
+    <img src="orf-logo.svg" width="103" height="39" alt="ORF.at">
     <a>ORF-Zentrum</a>
     <a>Würzburggasse 30</a>
     <a>1136 Wien</a>
@@ -42,7 +42,7 @@
     <input class="text-email">
     <a>Ihre Nachricht</a>
     <textarea class="text-nachricht"></textarea>
-    <input type="checkbox">
+    <input type="checkbox" class="checkboxx">
     <a>Lorem ipsum dolor sit amet, consectetur adipicing elit. Earum
        explicabo molestiae tenetur totam. Alias delectus dicta eius eligendi
        expedita iste iusto nesciunt placeat quod repellat suscipit, unde ut
