--- a/Contact.html
+++ b/Contact.html
@@ -2,6 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
+    <script src="JSMenü.js"></script>
     <link rel="stylesheet" type="text/css" href="ORF-Style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans:wght@400;900&display=swap" rel="stylesheet">
@@ -18,18 +19,15 @@
         <li><a href="#top40">Ö3 Top 40</a></li>
         <li><a href="Contact.html">Contact</a></li>
     </ul>
-    <ul class="mini">
-        <li><a href="ORF-News.html">News</a></li>
-        <li><a href="#top40">Ö3 Top 40</a></li>
-        <li><a href="Contact.html">Contact</a></li>
-    </ul>
 </nav>
 
 
 <article class="contact-ar">
 
     <h1>NEWS</h1>
+
     <img src="orf-logo.svg" width="103" height="39" alt="ORF.at">
+
     <a>ORF-Zentrum</a>
     <a>Würzburggasse 30</a>
     <a>1136 Wien</a>
@@ -43,6 +41,7 @@
     <a>Ihre Nachricht</a>
     <textarea class="text-nachricht"></textarea>
     <input type="checkbox" class="checkboxx">
+
     <a>Lorem ipsum dolor sit amet, consectetur adipicing elit. Earum
        explicabo molestiae tenetur totam. Alias delectus dicta eius eligendi
        expedita iste iusto nesciunt placeat quod repellat suscipit, unde ut
