--- a/ORF-News.html
+++ b/ORF-News.html
@@ -2,6 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
+    <script src="JSMenü.js"></script>
     <link rel="stylesheet" type="text/css" href="ORF-Style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans:wght@400;900&display=swap" rel="stylesheet">
@@ -10,25 +11,21 @@
 
 <body>
 
-        <nav>
-            <a href="#" class="toggle-bar" >☰ Menü</a>
-
-            <ul class="mainmenu">
-                <li><a href="#news">News</a></li>
-                <li><a href="#top40">Ö3 Top 40</a></li>
-                <li><a href="Contact.html">Contact</a></li>
-            </ul>
-            <ul class="mini">
-                <li><a href="#news">News</a></li>
-                <li><a href="#top40">Ö3 Top 40</a></li>
-                <li><a href="Contact.html">Contact</a></li>
-            </ul>
-        </nav>
-
+    <nav>
+        <a href="#" class="toggle-bar" >☰ Menü</a>
+        <ul class="mainmenu">
+            <li><a href="ORF-News.html">News</a></li>
+            <li><a href="#top40">Ö3 Top 40</a></li>
+            <li><a href="Contact.html">Contact</a></li>
+        </ul>
+    </nav>
+<section>
 <article class="news-article">
-    <h1>NEWS</h1>
+    <div>
+    <h2>NEWS</h2>
     <img class="orf-logo" src="orf-logo.svg" width="103" height="39" alt="ORF.at">
-    <h2>Weltweit Entsetzen nach Angriff auf Runshdie</h2>
+    </div>
+    <h1>Weltweit Entsetzen nach Angriff auf Runshdie</h1>
     <p class="news-text"> Der Messerangriff auf den Schriftsteller Salman Rushdie hat weltweit
         Entsetzen ausgelöst: Die US-Regierung und UNO-Generalsekretär Antonio
         Guterres zeigen sich bestürzt. Die USA und die Welt seien Zeugen eines „verwerfliche
@@ -38,9 +35,10 @@
 
     <img class="responsive-image" src="orf_mann.png" alt="Bild von einem weißen Mann, sein Name ist Salman Rushdie der Titel Lautet Angriff auf Rushdie" title="Angriff auf Rushdie">
     <p class="rush-angriff">Angriff auf Rushdie</p>
-
 </article>
+
         <h1> Inland</h1>
+
 <article class="inland-article">
 
     <h2>Neuer Obmann für Schülerunion</h2>
@@ -60,14 +58,13 @@
         <h1> Ausland</h1>
 <article class="ausland-article">
 
-
     <h2>Polen plant Einschränkung bei Visa für Russen</h2>
     <p> Auch Polen erwägt, die Regeln für die Visavergabe für russische Staatsbürger einzuschränken. „Polen arbeitet
         an der Entwicklung eines Konzepts, das es ermöglicht, keine Visa für Russen zu erteilen", sagte Vizeaußenminister
         Piotr Wawrzyk am Sonntag der Nachrichtenagentur PAP. Die Entscheidung darüber werde in den kommenden Wochen fallen.</p>
 
 </article>
-
+</section>
 <figure>
     <blockquote>
         <img class="putin" src="putin.jpg" alt="Putin der Presindent von Russland">
